fix: set the z-index of header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
   height: 48px;
   background: #f5efed;
   border-bottom: 1px solid #ddd;
+  z-index: 1000;
 }
 
 .header-wrapper {
